# aura-storage

./: .env.example  .gitignore  Cargo.toml  README.md
crates/auth/: Cargo.toml
crates/auth/src/: extractors.rs  jwks.rs  lib.rs  validate.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  pagination.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_create_project_agents.sql  0002_create_specs.sql  0003_create_tasks.sql  0004_create_sessions.sql  0005_create_messages.sql  0006_create_log_entries.sql  0007_add_message_thinking_fields.sql  0008_drop_project_agent_fk_constraints.sql  0009_add_org_id_to_all_tables.sql  0010_create_session_events.sql  0011_create_artifacts.sql  0012_create_processes.sql  0013_add_task_time_tracking.sql  0014_add_video_artifact_type.sql
crates/db/src/: lib.rs
crates/domain/artifacts/: Cargo.toml
crates/domain/artifacts/src/: models.rs  repo.rs
crates/domain/events/: Cargo.toml
crates/domain/events/src/: models.rs  repo.rs
crates/domain/logs/: Cargo.toml
crates/domain/logs/src/: models.rs  repo.rs
crates/domain/messages/: Cargo.toml
crates/domain/messages/src/: models.rs  repo.rs
crates/domain/processes/: Cargo.toml
crates/domain/processes/src/: models.rs  repo.rs
crates/domain/project-agents/: Cargo.toml
crates/domain/project-agents/src/: models.rs  repo.rs
crates/domain/sessions/: Cargo.toml
crates/domain/sessions/src/: models.rs  repo.rs
crates/domain/specs/: Cargo.toml
crates/domain/specs/src/: models.rs  repo.rs
crates/domain/tasks/: Cargo.toml
crates/domain/tasks/src/: models.rs  repo.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  org_auth.rs  router.rs  state.rs
crates/server/src/handlers/: artifacts.rs  events.rs  internal.rs  logs.rs  messages.rs  mod.rs  processes.rs  project_agents.rs  sessions.rs  specs.rs  stats.rs  tasks.rs  ws.rs
crates/server/src/jobs/: session_cleanup.rs
crates/server/tests/: process_test.rs  stats_fixes_test.rs
docs/: api.md
