[package]
name = "aura-storage-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
aura-storage-core = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
