[package]
name = "aura-storage-processes"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-storage-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
